[gd_scene load_steps=4 format=3 uid="uid://c0aihy3oqx73y"]

[ext_resource type="Script" path="res://inventory_system/scripts/inventorySlot.gd" id="1_iixd8"]
[ext_resource type="Texture2D" uid="uid://d36j1amyxht64" path="res://inventory_system/items/icons/icon template.png" id="2_nit7o"]

[sub_resource type="LabelSettings" id="LabelSettings_62xfm"]
font_size = 38
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[node name="InventorySlot" type="Button"]
custom_minimum_size = Vector2(96, 96)
mouse_filter = 1
script = ExtResource("1_iixd8")

[node name="Icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_nit7o")
expand_mode = 1

[node name="QuantityText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_62xfm")
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
